--- a/assets/data/npcs.yaml
+++ b/assets/data/npcs.yaml
@@ -100,3 +100,20 @@ Vortex:
   description: >
     On non lethal damage: jump to a previous column.
 
+Lump:
+  sprite:
+    atlas: units
+    tag: Lump
+  tier: 4
+  score: 4
+  components:
+    health: [5, 5]
+    on_damage: "lump_damage"
+    trigger_limit: [1, 1]
+  script: >
+    pub fn lump_damage(world, entity, cmd) {
+      RuneCommand::ChangeHealth(entity, -2)
+    }
+  description: >
+    On non lethal damage: loose 2 health.
+
