--- a/assets/data/player.yaml
+++ b/assets/data/player.yaml
@@ -4,9 +4,9 @@ Villager:
   sprite:
     atlas: units
     tag: Villager
+  cost: 2
   components:
-    cost: 2
-    health: [2, 2]
+    health: 2
     player:
     tags:
       - !Basic
@@ -15,9 +15,9 @@ Pikeman:
   sprite:
     atlas: units
     tag: Pikeman
+  cost: 2
   components:
-    cost: 2
-    health: [3, 3]
+    health: 3
     player:
     tags:
       - !Basic
@@ -26,9 +26,9 @@ Scarecrow:
   sprite:
     atlas: units
     tag: Scarecrow
+  cost: 1
   components:
-    cost: 1
-    health: [1, 1]
+    health: 1
     player:
     tags:
       - !Basic
@@ -38,9 +38,9 @@ Knight:
     atlas: units
     tag: Knight
   tier: 5
+  cost: 3
   components:
-    cost: 3
-    health: [4, 4]
+    health: 4
     player:
     tags:
       - !Basic # Basic bonus
@@ -51,9 +51,9 @@ Wanderer:
     atlas: units
     tag: Wanderer
   tier: 1
+  cost: 2
   components:
-    cost: 2
-    health: [1, 1]
+    health: 1
     on_spawn: "wanderer_spawn"
     player:
   script: >
@@ -72,9 +72,9 @@ Chieftain:
     atlas: units
     tag: Chieftain
   tier: 4
+  cost: 2
   components:
-    cost: 2
-    health: [2, 2]
+    health: 2
     on_fight: "chieftain_fight"
     player:
   script: >
@@ -94,9 +94,9 @@ Peasant:
   sprite:
     atlas: units
     tag: Peasant
+  cost: 2
   components:
-    cost: 2
-    health: [1, 1]
+    health: 1
     on_fight: "peasant_fight"
     player:
     tags:
@@ -120,9 +120,9 @@ Herbalist:
     atlas: units
     tag: Herbalist
   tier: 2
+  cost: 2
   components:
-    cost: 2
-    health: [2, 2]
+    health: 2
     on_fight: "healer_fight"
     player:
   script: >
@@ -144,9 +144,9 @@ Sheep:
   sprite:
     atlas: units
     tag: Sheep
+  cost: 2
   components:
-    cost: 2
-    health: [1, 1]
+    health: 1
     on_fight: "sheep_fight"
     player:
   script: >
@@ -168,9 +168,9 @@ Hunter:
     atlas: units
     tag: Hunter
   tier: 3
+  cost: 2
   components:
-    cost: 2
-    health: [2, 2]
+    health: 2
     on_fight: "hunter_fight"
     player:
     tags:
@@ -192,9 +192,9 @@ Ranger:
     atlas: units
     tag: Ranger
   tier: 2
+  cost: 2
   components:
-    cost: 2
-    health: [2, 2]
+    health: 2
     on_fight: "ranger_fight"
     player:
   script: >
@@ -214,9 +214,9 @@ Druid:
     atlas: units
     tag: Druid
   tier: 4
+  cost: 2
   components:
-    cost: 2
-    health: [2, 2]
+    health: 2
     on_fight: "druid_fight"
     player:
   script: >
@@ -241,9 +241,9 @@ Merchant:
     atlas: units
     tag: Merchant
   tier: 4
+  cost: 3
   components:
-    cost: 3
-    health: [2, 2]
+    health: 2
     on_spawn: "merchant_spawn"
     player:
   script: >
@@ -262,9 +262,9 @@ Beggar:
     atlas: units
     tag: Beggar
   tier: 3
+  cost: 2
   components:
-    cost: 2
-    health: [2, 2]
+    health: 2
     on_ally_gain_food: "beggar_ally_gain_food"
     player:
     trigger_limit: [3, 3]
@@ -284,9 +284,9 @@ Thief:
     atlas: units
     tag: Thief
   tier: 4
+  cost: 2
   components:
-    cost: 2
-    health: [2, 2]
+    health: 2
     on_fight: "thief_fight"
     player:
   script: >
@@ -308,9 +308,9 @@ Alchemist:
     atlas: units
     tag: Alchemist
   tier: 5
+  cost: 2
   components:
-    cost: 2
-    health: [2, 2]
+    health: 2
     on_fight: "alchemist_fight"
     player:
   script: >
@@ -332,9 +332,9 @@ Shopkeeper:
     atlas: units
     tag: Shopkeeper
   tier: 5
+  cost: 2
   components:
-    cost: 2
-    health: [2, 2]
+    health: 2
     on_ally_gain_food: "shopkeeper_ally_gain_food"
     player:
     trigger_limit: [3, 3]
@@ -352,9 +352,9 @@ Taxman:
     atlas: units
     tag: Taxman
   tier: 3
+  cost: 0
   components:
-    cost: 0
-    health: [2, 2]
+    health: 2
     on_fight: "taxman_fight"
     player:
   script: >
@@ -376,9 +376,9 @@ Martyr:
     atlas: units
     tag: Martyr
   tier: 3
+  cost: 2
   components:
-    cost: 2
-    health: [2, 2]
+    health: 2
     on_kill: "martyr_kill"
     player:
   script: >
@@ -397,9 +397,9 @@ Santo Subito:
     atlas: units
     tag: Santo Subito
   tier: 5
+  cost: 3
   components:
-    cost: 3
-    health: [2, 2]
+    health: 2
     on_kill: "santo_subito_kill"
     player:
   script: >
@@ -418,9 +418,9 @@ Mime:
     atlas: units
     tag: Mime
   tier: 3
+  cost: 2
   components:
-    cost: 2
-    health: [1, 1]
+    health: 1
     on_ally_kill: "mime_ally_kill"
     player:
   script: >
@@ -443,9 +443,9 @@ Vampire:
     atlas: units
     tag: Vampire
   tier: 4
+  cost: 2
   components:
-    cost: 2
-    health: [2, 2]
+    health: 2
     on_fight: "vampire_fight"
     player:
   script: >
@@ -468,9 +468,9 @@ Necromancer:
     atlas: units
     tag: Necromancer
   tier: 5
+  cost: 2
   components:
-    cost: 2
-    health: [2, 2]
+    health: 2
     on_ally_kill: "necromancer_ally_kill"
     player:
     trigger_limit: [1, 1]
@@ -491,9 +491,9 @@ Bard:
     atlas: units
     tag: Bard
   tier: 3
+  cost: 2
   components:
-    cost: 2
-    health: [2, 2]
+    health: 2
     on_ally_heal: "bard_ally_heal"
     player:
     trigger_limit: [3, 3]
@@ -513,9 +513,9 @@ Apothecary:
     atlas: units
     tag: Apothecary
   tier: 3
+  cost: 2
   components:
-    cost: 2
-    health: [2, 2]
+    health: 2
     on_damage: "apothecary_damage"
     player:
     trigger_limit: [3, 3]
@@ -537,9 +537,9 @@ Clay Statue:
     atlas: units
     tag: Clay Statue
   tier: 4
+  cost: 2
   components:
-    cost: 2
-    health: [6, 6]
+    health: 6
     on_damage: "clay_statue_damage"
     player:
   script: >
@@ -554,9 +554,9 @@ Stone Statue:
     atlas: units
     tag: Stone Statue
   tier: 4
+  cost: 2
   components:
-    cost: 2
-    health: [5, 5]
+    health: 5
     player:
     tags:
       - !Heavy
