--- a/crates/game_graphics/Cargo.toml
+++ b/crates/game_graphics/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2021"
 log = { workspace = true }
 rand = { workspace = true }
 rogalik = { workspace = true }
+serde = { workspace = true }
+serde_yaml = { workspace = true }
 wunderkammer = { workspace = true }
 
 game_data = { path = "../game_data" }
