--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ workspace.resolver = "2"
 
 [workspace.dependencies]
 anyhow = "1.0"
-rogalik = { path = "../rogalik" , features = ["serialize"]}
+rogalik = { path = "../rogalik/crates/rogalik" , features = ["serialize"]}
 # rogalik = { git = "https://github.com/maciekglowka/rogalik" , features = ["serialize"]}
 log = "0.4"
 wunderkammer = { path = "../wunderkammer", features = ["log"] }
